# odoo-integration

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.configs/: .env.api.template  .env.postgres.template  .gitignore  create_db.sh
alembic/: env.py
alembic/versions/: 6139e7e2d9f3_initial_migration.py
app/: data_sync.py  db.py  main.py  models.py  odoo_client.py  settings.py  utils.py
app/api/: models.py  routers.py  schemas.py
app/api/routes/: contacts.py  health.py  invoices.py
app/api/services/: auth.py  contacts.py  invoices.py  odoo.py
