[project]
name = "odoo-integration"
version = "0.1.0"
description = "API integration for Odoo service"
authors = [
    {name = "Anton Karpets",email = "karpets.as@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.4"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.mypy]
mypy_path = "app"
ignore_missing_imports = true
