[tool.poetry]
name = "odoo-integration"
version = "0.1.0"
description = "API integration for Odoo service"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
pydantic = "^2.12.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
pydantic-settings = "^2.12.0"
sqlmodel = "^0.0.31"
asyncpg = "^0.31.0"
uvicorn = "^0.40.0"
alembic = "^1.18.1"
apscheduler = "^3.11.2"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.mypy]
mypy_path = "app"
ignore_missing_imports = true
